fix(footer-nav): border radius and spacing between footer icons remain consistent across resolutions

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -48,9 +48,9 @@ a.icon {
   background-color: #262626;
   text-decoration: none;
   display: inline-flex;
-  padding: 0.75%;
-  margin-right: 0.75%;
-  border-radius: 5px;
+  padding: 0.75vh;
+  margin-right: 0.75vh;
+  border-radius: 1vh;
 }
 
 #footer-nav {
